# pymoteGO

./: CHANGELOG.md  pyproject.toml  release-please-config.json  renovate.json
.github/workflows/: publish.yml
examples/broadcast/: basic.py  nested.py
src/pymotego/: __init__.py  broadcast.py  constants.py  email.py  send_email.py
