[project]
name = "pymotego"
version = "0.1.5"
description = "`python` binding for `cogmoteGO`"
readme = "README.md"
authors = [
    { name = "HuYang", email = "hy.ccccr@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx[http2]>=0.28.1",
    "pyzmq>=27.0.1",
]

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
